# js-cleanifier

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  expanded.js  index.html  install_ubuntu_dependencies.sh  justfile  main.js  target.js
.claude/: settings.json
.github/: CONTRIBUTING.md
.github/workflows/: build_container.yml
examples/: tree_sitter_edits.rs
src/: lib.rs  main.rs  tree.rs
tests/: integration_tests.rs  lib_tests.rs  test_console_log.js  test_tree.js  testfile.js  tree.rs
