[package]
name = "js-cleanifier"
version = "0.0.2"
edition = "2024"

[[bin]]
name = "js-cleanifier"
path = "src/main.rs"

[lib]
name = "js_cleanifier"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.99"
chromiumoxide = { version = "0.7.0", features = ["tokio"] }
clap = { version = "4.5.46", features = ["derive", "env"] }
futures-util = "0.3.31"
prettify-js = "0.1.0"
serde_json = "1.0.143"
tempfile = "3.21.0"
tokio = { version = "1.47.1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tree-sitter = "0.25.8"
tree-sitter-javascript = "0.25.0"

[dev-dependencies]
tempfile = "3.21.0"
tokio-test = "0.4.4"
