[package]
name = "js-cleanifier"
version = "0.0.2"
edition = "2024"

[[bin]]
name = "js-cleanifier"
path = "src/main.rs"

[lib]
name = "js_cleanifier"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
chromiumoxide = { version = "0.8.0", features = ["tokio"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
futures-util = "0.3.31"
prettify-js = "0.1.0"
serde_json = "1.0.149"
tempfile = "3.24.0"
tokio = { version = "1.48.0", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tree-sitter = "0.26.3"
tree-sitter-javascript = "0.25.0"

[dev-dependencies]
tempfile = "3.24.0"
tokio-test = "0.4.4"
